Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <li>[x] Interface User-Friendly en Swing.</li>
 <li>[x] Multi-joueur en local (choix du pseudo avant début de la partie).</li>
 <li>[x] Règles personnalisables (cf <a href="#ii2---ajout-de-r%C3%A8gles-personnalis%C3%A9es">partie II.2</a>).</li>
+<li>[x] Gestion de la fin du tour par un sablier.</li>
 <li>[x] Mémorisation des cinque meilleurs scores.</li>
 </ul>
 
@@ -189,7 +190,6 @@ Puis l'éxécuter, toujours depuis le même dossier, avec la commande :</p>
 
 <ul>
 <li>[ ] Conception d'une intelligence artificielle à plusieurs niveaux.</li>
-<li>[ ] Mise en place d'un sablier régulant la fin des tours.</li>
 <li>[ ] Possibilité de proposer des mots en les tappant en plus de pouvoir directement cliquer sur les dés.</li>
 <li>[ ] Mise en place d'une aide contextuelle qui, à partir de trois lettres inscrites, affiche en surbrillance les lettres succeptibles de faire une mot plus grand.</li>
 </ul>
